--- a/Public/AdminPanel/css/dashboard.css
+++ b/Public/AdminPanel/css/dashboard.css
@@ -81,3 +81,7 @@ body {
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
+
+.navbar-brand .badge {
+  vertical-align: text-bottom;
+}   
